--- a/Example/iOS/PCVExample.iOS.csproj
+++ b/Example/iOS/PCVExample.iOS.csproj
@@ -126,6 +126,14 @@
       <Project>{3E6EFA97-FAAF-481D-A18F-7E0D651F759B}</Project>
       <Name>PCVExample</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Library\PageViewContainer.Plugin.iOS\PageViewContainer.Plugin.iOS.csproj">
+      <Project>{B47F385B-83FC-4F06-A582-3A92B71E3B56}</Project>
+      <Name>PageViewContainer.Plugin.iOS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Library\PageContainerView.Plugin\PageContainerView.Plugin.csproj">
+      <Project>{E6E0B956-C54A-4F81-BFF9-B758EA150599}</Project>
+      <Name>PageContainerView.Plugin</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.3.3.193\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.3.3.193\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
